--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,5 @@
   "editor.formatOnSave": false,
   "prettier.eslintIntegration": false,
   "eslint.autoFixOnSave": true,
+  "git.ignoreLimitWarning": true,
 }
