--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "scripts": {
     "start": "webpack-dev-server --hot",
-    "build": "webpack -p",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
     "watch": "webpack --watch",
     "lint": "node_modules/.bin/eslint 'src/**/*.js' --fix"
   },
   "devDependencies": {
-    "css-loader": "^0.28.11",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -14,10 +19,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
-    "node-sass": "^4.8.3",
     "prettier": "^1.12.1",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
