--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,5 @@
 {
   "presets": [
-    "react",
     [
       "env",
       {
@@ -12,6 +11,8 @@
           ]
         }
       }
-    ]
+    ],
+    "flow",
+    "react"
   ]
 }
