--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --hot",
     "dev": "webpack --mode development",
@@ -11,6 +12,7 @@
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -19,6 +21,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
+    "flow-bin": "^0.70.0",
     "prettier": "^1.12.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
