--- a/.eslintrc
+++ b/.eslintrc
@@ -2,12 +2,12 @@
   "parser": "babel-eslint",
   "plugins": ["prettier", "react", "jsx-a11y", "import"],
   "extends": [
-    "airbnb",
     "prettier",
+    "prettier/flowtype",
     "prettier/react",
-    "prettier/flowtype"
+    "airbnb"
   ],
   "rules": {
-    "quotes": ["error", "single"],
+    "quotes": ["error", "single"]
   }
 }
