--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.70.0",
+    "flow-typed": "^2.4.0",
     "prettier": "^1.12.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
