--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "node_modules/.bin/eslint 'src/**/*.js' --fix"
   },
   "devDependencies": {
+    "autoprefixer": "^8.5.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
@@ -24,7 +25,10 @@
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.70.0",
     "flow-typed": "^2.4.0",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
     "prettier": "^1.12.1",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
