--- a/.flowconfig
+++ b/.flowconfig
@@ -8,5 +8,9 @@
 [lints]
 
 [options]
+module.file_ext=.css
+module.name_mapper.extension='css' -> 'empty/object'
+module.file_ext=.scss
+module.name_mapper.extension='scss' -> 'empty/object'
 
 [strict]
